# DAGrad

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
dagrad/engine/: block.py  workflow.py
examples/: showcase_simple_workflow.ipynb
