[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dagrad"
version = "0.1.0"
description = "Lightweight DAG-style autograd workflow engine built on PyTorch"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
    "jupyter>=1,<2",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["dagrad*"]